--- a/Views/Pay/Approved.cshtml
+++ b/Views/Pay/Approved.cshtml
@@ -20,7 +20,7 @@
                 <div class="grid grid-cols-2 gap-4">
                     <div>
                         <p class="text-sm text-gray-500">Order Number</p>
-                        <p class="font-medium">#ORD-87654321</p>
+                        <p class="font-medium">@ViewBag.Reference</p>
                     </div>
                     <div>
                         <p class="text-sm text-gray-500">Shop Name</p>
