--- a/Views/Browse/Index.cshtml
+++ b/Views/Browse/Index.cshtml
@@ -28,18 +28,19 @@
                             <span class="text-gray-600 text-sm ml-1">@meal.vendors.TotalReviews</span>
                         </div>
                         <p class="text-gray-600 text-sm mb-3">@($"{meal.listing.QuantityAvailable} Packs Left") </p>
-                        <p class="text-gray-600 text-sm mb-3">
+                        <p class="text-gray-600 text-sm mb-3">Pickup from :
                             @(meal.listing.AvailableFrom.Date == DateTime.Today
                                                     ? $"Today, {meal.listing.AvailableFrom:h:mm tt}"
                                                     : meal.listing.AvailableFrom.ToString("d MMMM, h:mm tt"))
                         </p>
 
-                        <p class="text-gray-600 text-sm mb-3">
+                        <p class="text-gray-600 text-sm mb-3">Offer Expires :
                             @(meal.listing.AvailableUntil.Date == DateTime.Today
                                                     ? $"Today, {meal.listing.AvailableUntil:h:mm tt}"
                                                     : meal.listing.AvailableUntil.ToString("d MMMM, h:mm tt"))
                         </p>
-                        <p class="text-gray-600 text-sm mb-3">@($"{meal.vendors.Address}") • 0.3 miles away</p>
+                        <p class="text-gray-600 text-sm mb-3">@($"{meal.vendors.Address} • 0.{meal.listing.Id} Kms away")
+                        </p>
                         <div class="flex justify-between items-center">
                             <div class="flex justify-between items-center gap-2">
                                 <span class="text-lg font-bold text-primary">@($"R{meal.listing.DiscountPrice}")</span>
