made sure only 1 email is sent

--- a/Views/Pay/Approved.cshtml
+++ b/Views/Pay/Approved.cshtml
@@ -19,7 +19,7 @@
                 <div class="grid grid-cols-2 gap-4">
                     <div>
                         <p class="text-sm text-gray-500">Order Number</p>
-                        <p class="font-medium">@Model.OrderNumber</p>
+                        <p class="font-medium">@($"#{Model.OrderNumber}")</p>
                     </div>
                     <div>
                         <p class="text-sm text-gray-500">Shop Name</p>
